overflow issue fixed

--- a/css/productCategory.css
+++ b/css/productCategory.css
@@ -15,6 +15,8 @@
   .product-img {
     margin-top: 40px;
     margin-bottom: 18px;
+    width: 95px;
+    height: 108px;
   }
 
   /* texts for each category */
